jena-shex/src/test/files/spec/negativeSyntax/PN_LOCAL-PERCENT-mid.shex
# PN_LOCAL with bad PERCENT escape in middle character
# source: turtle-syntax-bad-pname-02.ttl
PREFIX ex: <http://a.example/>

ex:IssueShape {
   ex:p%1g .
}
